Resolved the issue - Search form widget goes outside viewport on mobile devices - Issue - #25

--- a/style.css
+++ b/style.css
@@ -398,7 +398,7 @@ li.recentcomments {
 	border-color: #4b3371;
 }
 .widget .input-group {
-    width: 110%;
+    width: 100%;
 }
 /* =Infinite Scroll
 ----------------------------------------------- */
